Change the term 'Choice' to 'Question' throughout the interface.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1545 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/montshire/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/montshire/simplekey/help_start.html
@@ -88,14 +88,11 @@
                             alt=""> Click to enlarge</a>
                         <ul>
                             <li>Choose the plant group you think your plant is
-                            in. You'll be shown some choices. Compare the
+                            in. To do this, compare the
                             features of your plant with the "Key
                             Characteristics" listed for each plant group and
                             "Exceptions," which will help you avoid mixing up
                             groups. <a href="#" class="show">More...</a></li>
-                            <li class="hidden">If your plant isn't in one of
-                            the first three groups, press the "Show me other
-                            groups" button and new choices will appear.</li>
                             <li class="hidden">When you've found the group
                             your plant belongs to, press "My plant is in this
                             group."</li>
@@ -187,7 +184,7 @@
                             section "What type of features can you see on your
                             plant?" and you'll only be offered questions about
                             leaves.</li>
-                            <li>Click the "Get more choices" button and new
+                            <li>Click the "Get More Questions" button and new
                             questions will appear, sorted in order of their
                             helpfulness in narrowing down your species.</li>
                             <li>View a set of thumbnail photographs of all the
@@ -195,18 +192,15 @@
                             listed in alphabetical order by scientific
                             name.</li>
                             <li>Click on a photo to get a pop-up box with more
-                            information about a plant.  If you decide that
-                            this is your plant, click on "That's My Plant" in
+                            information about a plant. If you decide that
+                            this is your plant, click on "Get More Info" in
                             the pop-up box and you'll be taken to the species
                             full information page.
                             <a href="#" class="show">More...</a></li>
                             <li class="hidden">The set of thumbnails gets
                             smaller as you answer more questions and hone in
-                            on your species by the process of
+                            on your species by a process of
                             elimination.</li>
-                            <li class="hidden">To delete questions from your
-                            list, click the X button next to the
-                            question.</li>
                         </ul>
                     </div><!-- // Closes .question -->
                     
