--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -63,13 +63,10 @@
             <img src="/static/images/icons/zoom.png"
             alt=""> Click to enlarge</a>
         <ul>
-            <li>Choose the plant group you think your plant is in. You'll
-            be shown some choices. Compare the features of your plant with
+            <li>Choose the plant group you think your plant is in.
+            To do this, compare the features of your plant with
             the "Key Characteristics" listed for each plant group and
             "Exceptions," which will help you avoid mixing up groups.</li>
-            <li>If your plant isn't in one of the first three groups, press
-            the "Show me other groups" button and new choices will
-            appear.</li>
             <li>When you've found the group your plant belongs to, press
             "My plant is in this group."</li>
         </ul>
@@ -136,18 +133,23 @@
             src="/static/images/icons/zoom.png"
             alt=""> Click to enlarge</a>
         <ul>
-            <li>On the left side of the new page is a list of choices to help
-            you narrow your matching species. Pick any choice and a box will
-            open in the center of the page. In the box, make a selection that
+            <li>On the left side of the new page is a list of questions to
+            help
+            you narrow your matching species. Pick any question and a box will
+            open in the center of the page. In the box, select the
+            answer that
             most closely matches your plant and press the Apply Selection
             button. If you're not sure which selection to make, it's fine to
             move on without making a selection.</li>
-            <li>Press the Get More Choices button to add a few new choices,
+            <li>Press the Get More Questions button to add a few new
+            questions,
             added in order of their potential helpfulness in narrowing down
             your matching species.</li>
             <li>If you can only observe part of a plant, say the leaves, you
-            can press Get More Choices, then check the "leaves" check box and
-            press the second Get More Choices button, and you'll only get new
+            can press Get More Questions, then check the "leaves" check box
+            and
+            press the second Get More Questions button, and you'll only get
+            new
             choices about leaves.</li>
             <li>View a set of thumbnail photos of all the possible plants
             that match your selections, listed in alphabetical order by
@@ -157,10 +159,10 @@
             read more about it in order to decide, press the Get More Info
             button to go to the full information page for that species.
             <li class="hidden">The set of thumbnail photos gets smaller as
-            pick additional choices and make more selections, honing in
-            on your plant by the process of elimination.</li>
-            <li class="hidden">To clear a selection you've previously made,
-            click the Clear link for the choice in the list at left.</li>
+            pick additional questions and answer them, honing in
+            on your plant by a process of elimination.</li>
+            <li class="hidden">To clear an answer you've previously made,
+            click the Clear link for the question in the list at left.</li>
         </ul>
     </div>
 
