--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -40,9 +40,8 @@
 
                         <div class="intro-message">
                             <h4>Narrow Your Matching Species</h4>
-                            <p>Pick a choice in the list
-                            at left. Then make a selection here
-                            that most closely matches your plant.
+                            <p>Pick a question from the list
+                            at left. Then select an answer here.
                             Repeat.</p>
                         </div>
                         
@@ -99,11 +98,11 @@
 
                 <div id="sidebar" class="tinted">
                     <div class="section instructions">
-                        <h5>Pick a choice for you plant from this
+                        <h5>Pick a question from this
                             scrollable list:</h5>
                     </div>
                     <div class="scroll">
-                        <div class="loading">Loading choices…</div>
+                        <div class="loading">Loading questions…</div>
                         <ul class="option-list" aria-live="polite"
                         aria-relevant="additions removals">
                         </ul>
@@ -111,8 +110,8 @@
 
                     <div class="section">
                         <p class="get-more">
-                            <a class="get-choices">Get More Choices</a>
-                            Add a few more choices for narrowing your
+                            <a class="get-choices">Get More Questions</a>
+                            Add a few more questions for narrowing your
                             matching species.</p>
                     </div>
 
