Put the full question into the main heading in the working area. Change other headings and labels as necessary. Tweak working area styles.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1547 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -39,16 +39,15 @@
                         <a href="#" class="close"></a>
 
                         <div class="intro-message">
-                            <h4>Narrow Your Matching Species</h4>
+                            <h4>Narrow your matching species</h4>
                             <p>Pick a question from the list
                             at left. Then select an answer here.
                             Repeat.</p>
                         </div>
-                        
+
                         <h4></h4>
                         <div>
                             <div class="info">
-                                <div class="question"></div>
                                 <div class="hint"></div>
                                 <div class="values"></div>
                                 <div class="actions">
