In the questions list at left, give answered questions a subtle background color to help differentiate them from unanswered questions.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1549 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -897,8 +897,12 @@ ul.option-list li {
 ul.option-list li.last {
     border-bottom: 1px solid #c3d941;
 }
+ul.option-list li.answered {
+    background: #ffd;
+}
 ul.option-list li.active, ul.option-list li:hover,
-ul.option-list li.active span.value {
+ul.option-list li.active span.value,
+ul.option-list li.answered.active {
     background: #dce890;
     cursor: pointer;
 }
