--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -50,8 +50,11 @@
                 <h2>
                     <em>{{ scientific_name }}</em>
                     <span class="origin">{{ taxon.taxonomic_authority }}</span>
-                    <span class="common">{% for common_name in taxon.common_names.all %}{% if not forloop.first %}, {% endif %}
-                        {{ common_name }}{% endfor %}</span>
+                    <span class="common">
+                        {% for common_name in taxon.common_names.all %}
+                            {% if not forloop.first %}, {% endif %}{{ common_name }}
+                        {% endfor %}
+                    </span>
                 </h2>
 
                 <div id="species-images">
