Make the photo types  menu more prominent to prevent it being overlooked.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1552 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -75,8 +75,8 @@
                         <form id="results-display">
                             <img class="icon" alt=""
                                 src="/static/images/icons/show-me.png">
-                            <label for="image-type-selector">Show me 
-                                photos of:</label>
+                            <label for="image-type-selector">Show photos
+                                of:</label>
                             <select dojoType="dijit.form.Select"
                                 id="image-type-selector"
                                 name="image-type-selector">
