Make video links on plant groups and subgroups pages more prominent.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1553 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -56,7 +56,7 @@
                                 {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
                             </p>
                             <p class="vid">
-                                <a href="http://www.youtube.com/v/{{ pile.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group.</a>
+                                <a href="http://www.youtube.com/v/{{ pile.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group</a>
                             </p>
                             <a class="plant-in-subgroup" href="{{ url }}">My plant is in this subgroup</a>
                         </div>
