--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -62,7 +62,7 @@
                                 {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
                             </p>
                             <p class="vid">
-                                <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group.</a>
+                                <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group</a>
                             </p>
                             <a class="plant-in-group" href="{{ url }}">My plant is in this group</a>
                         </div>
