Remove space before comma between species common names introduced with an earlier tweak of mine.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1554 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -51,9 +51,7 @@
                     <em>{{ scientific_name }}</em>
                     <span class="origin">{{ taxon.taxonomic_authority }}</span>
                     <span class="common">
-                        {% for common_name in taxon.common_names.all %}
-                            {% if not forloop.first %}, {% endif %}{{ common_name }}
-                        {% endfor %}
+                        {% for common_name in taxon.common_names.all %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}
                     </span>
                 </h2>
 
