--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -24,36 +24,36 @@
                         Result{% if paginator.count != 1 %}s{% endif %}
                         for
                         <strong>{{ query }}</strong>
-                        </h2>
-                    <ul id="search-results-list">
+                    </h2>
+                    <ul id="search-results-list">    
                     {% for result in page.object_list %}
                         <li>
                             {% if result.scientific_name %}
-                                <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/"><img 
+                            <a href="{{ url_base }}/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/"><img 
                                     src="/static/images/icons/icon-leaf.png"
                                     alt="" title="Species page">
 {% search_highlight result.title with query excerpt 'False' %}</a>
                             {% else %}
                                 {% if result.model_name == 'family' %}
-                                <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/families/{{ result.name|lower }}/"><img
+                                <a href="{{ url_base }}/families/{{ result.name|lower }}/"><img
                                     src="/static/images/icons/icon-family.png"
                                     alt="" title="Family page">
 {% search_highlight result.title with query excerpt 'False' %}</a>
                                 {% else %}
                                     {% if result.model_name == 'genus' %}
-                                    <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/genera/{{ result.name|lower }}/"><img
+                                    <a href="{{ url_base }}/genera/{{ result.name|lower }}/"><img
                                         src="/static/images/icons/icon-genus.png"
                                         alt="" title="Genus page">
 {% search_highlight result.title with query excerpt 'False' %}</a>
                                     {% else %}
                                         {% if result.model_name == 'helppage' %}
-                                        <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}{{  result.object.url_path }}"><img
+                                        <a href="{{ url_base }}{{ result.object.url_path }}"><img
                                             src="/static/graphics/help-icon.jpg"
                                             alt="" title="Help page">
 {% search_highlight result.title with query excerpt 'False' %}</a>
                                         {% else %}
                                             {% if result.model_name == 'glossaryhelppage' %}
-                                            <a href="http{% if request.is_secure%}s{% endif %}://{{ request.get_host }}{{ result.object.url_path }}"><img
+                                            <a href="{{ url_base }}{{ result.object.url_path }}"><img
                                                 src="/static/graphics/glossary-icon.jpg"
                                                 alt=""
                                                 title="Glossary page">
