Plant group and subgroups pages: glossarize words in Key Characteristics and Exceptions sections.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1560 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -88,5 +88,13 @@
         <script>
             {% include "simplekey/partner_site_inline_js.html" %}
         </script>
+
+        <script>
+            dojo.require('gobotany.sk.groups');
+            dojo.addOnLoad(function() {
+                var helper = gobotany.sk.groups.GroupsHelper();
+                helper.setup();
+            });
+        </script>
     </body>
 {% endblock %}
