--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -84,5 +84,13 @@
         <script>
             {% include "simplekey/partner_site_inline_js.html" %}
         </script>
+
+        <script>
+            dojo.require('gobotany.sk.groups');
+            dojo.addOnLoad(function() {
+                var helper = gobotany.sk.groups.GroupsHelper();
+                helper.setup();
+            });
+        </script>
     </body>
 {% endblock %}
