Enhance the copyright in the footer so it specifically says that all images (as well as text and data) are copyrighted.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1561 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -1,9 +1,12 @@
         <footer>
             <div class="container">
                 <div class="three-col">
-                    <p>Copyright &copy; 2011 New England Wild Flower Society.
-                        <br>All rights reserved.</p>
-                    <p>180 Hemenway Road, Framingham, MA 01701</p>
+                    <p>All images, text and data copyright &#169; 2011-2012
+                    New England Wild Flower Society.
+                    All rights reserved.</p>
+                    <p><a href="http://www.newfs.org/">New England Wild
+                        Flower Society</a><br>
+                    180 Hemenway Road, Framingham, MA 01701</p>
                 </div><!--Closes .three-col-->
 
                 <div class="three-col">
