On the species page, supply link title and image alt values that contain the combined photo title, credit and copyright information. Format and display this atop the lightboxed photos.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1562 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -57,15 +57,8 @@
         <script src="/static/scripts/global.js"></script>
         <script src="/static/scripts/shadowbox.js"></script>
         <script>
-            function moveCloseLink() {
-                var cb = document.getElementById('sb-nav-close');
-                var tb = document.getElementById('sb-wrapper');
-                if (tb) {
-                    tb.appendChild(cb);
-                }
-            }
             Shadowbox.init({
-                onOpen: moveCloseLink
+                onOpen: global_moveShadowboxCloseLink
             });
         </script>
 
