--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -1,7 +1,8 @@
         <footer>
             <div class="container">
                 <div class="three-col">
-                    <p>All images, text and data copyright &#169; 2011-2012
+                    <p class="copyright">>All images, text and data copyright 
+                    &#169; {% include "simplekey/_copyright_years.html" %}
                     New England Wild Flower Society.
                     All rights reserved.</p>
                     <p><a href="http://www.newfs.org/">New England Wild
