Reorganize and improve species page code. Remove obsolete functions that remember the open/closed states of the expandable character sections.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1563 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -300,11 +300,8 @@
         API_URL = '{% url api-base %}';
         dojo.require('gobotany.sk.species');
         dojo.addOnLoad(function() {
-            global_toggleList();
-            gobotany.sk.species.init('{{ scientific_name }}');
-        });
-        dojo.addOnUnload(function() {
-            gobotany.sk.species.persist_visibility();
+            var helper = gobotany.sk.species.SpeciesPageHelper();
+            helper.setup();
         });
         
         /* So far the Smooth Div Scroll plugin is only working in
