Disabled arrow-key capture on scrollables, since there are several per page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1567 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -41,7 +41,7 @@
         <script src="/static/jquery.tools.min.js"></script>
         <script>
             $(document).ready(function() {
-                $('.img-container').scrollable();
+                $('.img-container').scrollable({keyboard: false});
             });
         </script>
 
