Start a new base template to where all pages can eventually be migrated, for helping optimize JS and CSS. Move the home page to the new template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1568 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/core/templates/dojobase.html
+++ b/gobotany/core/templates/dojobase.html
@@ -1,56 +1,4 @@
-<!-- start dojobase.html -->
+{% include "_dojobase.html" %}
 
-{% if debug_dojo %}
-    <!--
-       BE SURE TO RUN "<buildout>/scripts/dojo-build.sh" BEFORE DEBUGGING!
-      -->
-    <script>
-	djConfig = {
-           isDebug: true,
-           debugAtAllCosts: true,
-           useXDomain: false,
-           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/static/dojo/',
-           modulePaths: {
-               dijit: '/static/dijit',
-               dojo: '/static/dojo',
-               dojox: '/static/dojox',
-               gobotany: '/static/gobotany',
-               layers: '/static/js/layers'
-           },
-           parseOnLoad: true
-       };
-    </script>
-    <!-- src="http://ajax.googleapis.com/ajax/libs/dojo/1.6.0/dojo/dojo.xd.js" -->
-    <script src="/static/dojo/dojo.js"></script>
-    <!-- speeds things up immensely, but you cannot debug dojo itself: -->
-    <script src="/static/js/layers/sk.js"></script>
+{% include "_claro_css.html" %}
 
-{% else %}
-    <script>
-	djConfig = {
-           isDebug: false,
-           debugAtAllCosts: false,
-           useXDomain: false,
-           baseUrl: 'http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/static/js/',
-           modulePaths: {
-             <!-- If you run "<buildout>/scripts/dojo-build.sh" then: -->
-               <!-- dijit: '/static/js/dijit', -->
-               <!-- dojo: '/static/js/dojo', -->
-               <!-- dojox: '/static/js/dojox', -->
-             <!-- Always necessary: -->
-               gobotany: '/static/gobotany',
-               layers: '/static/js/layers'
-           },
-           parseOnLoad: true
-       };
-    </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.6.0/dojo/dojo.xd.js"></script>
-    <script src="/static/js/layers/sk.js"></script>
-
-{% endif %}
-
-<link rel="stylesheet"
-      href="http://ajax.googleapis.com/ajax/libs/dojo/1.6.0/dijit/themes/claro/claro.css"
-      type="text/css" media="screen" title="Dijit Claro Style">
-
-<!-- end dojobase.html -->
