--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -1,7 +1,7 @@
         <footer>
             <div class="container">
                 <div class="three-col">
-                    <p class="copyright">>All images, text and data copyright 
+                    <p class="copyright">All images, text and data copyright 
                     &#169; {% include "simplekey/_copyright_years.html" %}
                     New England Wild Flower Society.
                     All rights reserved.</p>
