--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,10 +1,11 @@
-{% extends "simplekey/_base.html" %}
+{% extends "simplekey/_new_base.html" %}
 
 {% block title %}Go Botany: New England Wild Flower Society{% endblock %}
 {% block title_suffix %}{% endblock %}
 
-{% block body %}
-    <body id="home" class="claro top-level">
+{% block body_attributes %}id="home" class="claro top-level"{% endblock %}
+
+{% block body_content %}
         <div id="top-wrapper">
         {% include "simplekey/_header.html" %}
 
@@ -23,71 +24,65 @@
                             possibilities. The key works best if you
                             have an actual sample or a few photos of
                             your plant.</p>
-                            {# If the user has elected to skip the start page, go right to the key. #}
-                            <a href="{% url simplekey-page 1 %}" id="cta">Get Started</a>
+                            <a href="{% url simplekey-page 1 %}"
+                                id="cta">Get Started</a>
                         </div>
-                        </div>
                     </div>
+                </div>
 
-                    <div class="three-col">
-                        <h3>MyPlants</h3>
-                        <h5>Connect with other plant fans!</h5>
-                        <p>Join our on-line community of plant enthusiasts! Find
-                        friends, collaborate on field surveys for plants, share
-                        your discoveries, get help identifying plants, make maps,
-                        and develop checklists of plants for particular sites you
-                        are exploring.</p>
-                        <a class="learn-more">Learn More</a>
-                    </div>
+                <div class="three-col">
+                    <h3>MyPlants</h3>
+                    <h5>Connect with other plant fans!</h5>
+                    <p>Join our on-line community of plant enthusiasts!
+                    Find friends, collaborate on field surveys for plants,
+                    share your discoveries, get help identifying plants,
+                    make maps, and develop checklists of plants for
+                    particular sites you are exploring.</p>
+                    <a class="learn-more">Learn More</a>
+                </div>
 
-                    <div class="three-col">
-                        <h3>Advanced ID Tools</h3>
-                        <h5>For experienced botanists!</h5>
-                        <p>Identify over 3,000 New England plants by using our
-                        Full Identification Key, including technical
-                        multiple-access and dichotomous keys to families, genera,
-                        and species. Also learn about subspecies and varieties
-                        native to our region.</p>
-                        <a class="learn-more" href="{% url advanced-id-tools %}">
-                          Learn More
-                        </a>
-                    </div>
+                <div class="three-col">
+                    <h3>Advanced ID Tools</h3>
+                    <h5>For experienced botanists!</h5>
+                    <p>Identify over 3,000 New England plants by using our
+                    Full Identification Key, including technical
+                    multiple-access and dichotomous keys to families, genera,
+                    and species. Also learn about subspecies and varieties
+                    native to our region.</p>
+                    <a class="learn-more"
+                        href="{% url advanced-id-tools %}">Learn More</a>
+                </div>
 
-                    <div class="three-col last">
-                        <h3>Teaching Tools</h3>
-                        <h5>A useful teaching resource!</h5>
-                        <p>Go Botany encourages informal, self-directed education
-                        in botany for science stduents and beginning and amateur
-                        botanists. Professors, teachers, and environmental
-                        educators can share curricula and teaching ideas.</p>
+                <div class="three-col last">
+                    <h3>Teaching Tools</h3>
+                    <h5>A useful teaching resource!</h5>
+                    <p>Go Botany encourages informal, self-directed education
+                    in botany for science stduents and beginning and amateur
+                    botanists. Professors, teachers, and environmental
+                    educators can share curricula and teaching ideas.</p>
+                    <a class="learn-more" href="#">Learn More</a>
+                </div>
+
+                <div class="clearit"></div>
+
+                <div id="potd">
+                    <img src="/static/images/layout/potd-img1.jpg" 
+                        alt="Magnolia Virginiana" />
+                    <div class="details">
+                        <h4>Plant of the Day: 
+                            <span class="latin">Magnolia Virginiana</span> 
+                            <span class="english">Sweet Bay</span></h4>
+                        <p>Although it attains impressive sizes in the south,
+                        sweetbay magnolia is a medium-sized tree (20-60 feet
+                        or 10-20 meters tall) in southern New England. The
+                        leaves are lustrous green on top and white-hairy
+                        beneath, and often remain on the plant into early
+                        winter.</p>
                         <a class="learn-more" href="#">Learn More</a>
                     </div>
-
                     <div class="clearit"></div>
-
-                    <div id="potd">
-                        <img src="/static/images/layout/potd-img1.jpg" 
-                            alt="Magnolia Virginiana" />
-                        <div class="details">
-                            <h4>Plant of the Day: 
-                                <span class="latin">Magnolia Virginiana</span> 
-                                <span class="english">Sweet Bay</span></h4>
-                            <p>Although it attains impressive sizes in the south,
-                            sweetbay magnolia is a medium-sized tree (20-60 feet
-                            or 10-20 meters tall) in southern New England. The
-                            leaves are lustrous green on top and white-hairy
-                            beneath, and often remain on the plant into early
-                            winter.</p>
-                            <a class="learn-more" href="#">Learn More</a>
-                        </div>
-                        <div class="clearit"></div>
-                    </div>
                 </div>
             </div>
         </div>
-
-        {% include "simplekey/_footer.html" %}
-        
-        {% include "simplekey/_script_constants.html" %}
-    </body>
+    </div>
 {% endblock %}
