--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -55,17 +55,7 @@
             src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
         <script src="/static/underscore-min.js"></script>
-        <!-- Image Gallery Slider -->
-        <!-- Note: jQuery Tools below contains its own jQuery, v. 1.4.2.
-             Rely on this one for now, in order to avoid conflicts which
-             do occur when loading a newer version too. It also improves
-             download time. -->
-        <script src="/static/jquery.tools.min.js"></script>
-        <script>
-            $(document).ready(function() {
-                $('.img-container').scrollable();
-            });
-        </script>
+        {% include "simplekey/_image_gallery_js.html" %}
         <!-- Temporarily remove the 'extra' jQuery here for now until
              all components' problems can be sorted out. jQuery Tools
              above comes bundled with jQuery 1.4.2, and having both
